--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
         <div class="carousel-item">
-          <img src="img/landscape.jpg" class="d-block w-100" alt="..." height="400"  id="carousel-img-2">
+          <img src="img/Landscape.JPG" class="d-block w-100" alt="..." height="400"  id="carousel-img-2">
           <div class="carousel-caption d-none d-md-block">
             <h5 class="carousel-tag">Valley</h5>
             <p>Over every mountain, there is a pass, although it may not be seen from the valley</p>
